infra/k8s/myweb-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: name-based-virtualhost-ingress
spec:
  rules:
    - host: httpd.google.com
      http:
        paths:
          - backend:
              serviceName: httpd-service
              servicePort: 80

    - host: nginx.google.com
      http:
        paths:
          - backend:
              serviceName: nginx-service
              servicePort: 80
